Reduce parameter complexity at test runtime
Define a standard set manually, and override this with an extended set in tests that require it.